apps/prod/mow/mmm.w-influencers.com/ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - mmm.w-influencers.com
    secretName: https-secret
  rules:
  - host: mmm.w-influencers.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: ui-service
            port:
              number: 80
